# OceanSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Ocean/: CMakeLists.txt  Complex.cpp  Complex.h  Config.cpp  FFT.cpp  FFT.h  FPSCounter.h  FreeType.h  Ocean.cpp  Ocean.h  Shader.cpp  Vector.cpp  main.cpp  stdafx.h
Ocean/data/: ocean.cfg  ocean.frag  ocean.vert
cmake/: 3rdparty.cmake  config.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  plog.cmake  stb.cmake
data/: ocean.cfg  ocean.frag  ocean.vert  ocean110.frag  ocean110.vert  screen-blur.frag  screen-normal.frag  screen-sobel.frag  screen110-blur.frag  screen110-dither-gb.frag  screen110-dither.frag  screen110-gray.frag  screen110-normal.frag  screen110-sobel.frag  screen110.vert
src/: CMakeLists.txt
src/FftLib/: CMakeLists.txt  FFT.cpp  FFT.h  stdafx.h
src/GraphicsLib/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  FreeType.cpp  FreeType.h  FreeTypeHelpers.cpp  FreeTypeHelpers.h  GlFormatter.h  GlfwWrapper.cpp  GlfwWrapper.h  GraphicsLogger.cpp  GraphicsLogger.h  GraphicsResource.cpp  GraphicsResource.h  GraphicsUtils.cpp  GraphicsUtils.h  ImGuiWrapper.cpp  ImGuiWrapper.h  ScreenShader.cpp  ScreenShader.h  Shader.cpp  Shader.h  stdafx.h
src/MathLib/: CMakeLists.txt  Complex.cpp  Complex.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  stdafx.h
src/Ocean/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  Config.cpp  Config.h  FPSCounter.cpp  FPSCounter.h  LogFormatter.h  ResourceFinder.cpp  ResourceFinder.h  ScopeGuard.cpp  ScopeGuard.h  ScreenCapture.cpp  WorldPosition.cpp  WorldPosition.h  main.cpp  stdafx.h
src/Ocean/data/: ocean.frag  ocean.vert  ocean110.frag  ocean130.frag  ocean130.vert  ocean330.frag  ocean330.vert  ocean430.frag  ocean430.vert  screen-bw.frag  screen-dither-gb.frag  screen-dither.frag  screen-gray.frag  screen-wave.frag  screen.vert
src/OceanLib/: CMakeLists.txt  Ocean.cpp  Ocean.h  stdafx.h
src/ScreenCaptureLib/: CMakeLists.txt  ScreenCapture.cpp  ScreenCapture.h  stdafx.h
src/Utils/: FsUtils.cpp  FsUtils.h  stdafx.h
